@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: December 12, 2010</p>
+      <p>Last Updated: December 13, 2010</p>
     </td>
   </tr>
 </table>
@@ -2012,6 +2012,10 @@ buildroot-1.8 2009-12-21 &lt;spudmonkey@racsa.co.cr&gt;
 
 <ul><pre>
 nuttx-5.16 2011-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
+
+    * include/nuttx/usb -- Created new directory.  Moved all usb-related header
+      files to this new directory.  Created a skeleton for a new USB host header
+      file
 
 pascal-2.1 2010-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
