@@ -51,8 +51,8 @@
 #include <queue.h>
 
 #include <nuttx/fs.h>
-#include <nuttx/usb_storage.h>
-#include <nuttx/usbdev.h>
+#include <nuttx/usb/usb_storage.h>
+#include <nuttx/usb/usbdev.h>
 
 /****************************************************************************
  * Definitions
