@@ -44,8 +44,8 @@
 #include <unistd.h>
 #include <debug.h>
 
-#include <nuttx/usbdev.h>
-#include <nuttx/usbdev_trace.h>
+#include <nuttx/usb/usbdev.h>
+#include <nuttx/usb/usbdev_trace.h>
 
 #include "usbstrg.h"
 
